# offline-intelligence

./: .env  .gitattributes  .gitignore  COMPLETE_DOCUMENTATION.md  Cargo.toml  Makefile  PUBLISHING.md  README.md  RELEASE_NOTES_v0.1.2.md  build.bat  build.sh  package-lock.json  package.json
crates/cpp-bindings/: CMakeLists.txt  Cargo.toml  README.md  conanfile.py
crates/cpp-bindings/cmake/: offline_intelligence_cppConfig.cmake.in
crates/cpp-bindings/include/: offline_intelligence.h
crates/cpp-bindings/src/: lib.rs
crates/cpp-bindings/vcpkg/: portfile.cmake  vcpkg.json
crates/java-bindings/: Cargo.toml  README.md  build.gradle  build.sh  gradle.properties  pom.xml  settings.gradle
crates/java-bindings/java/com/offlineintelligence/: Message.java  OfflineIntelligence.java  OptimizationResult.java  SearchResult.java
crates/java-bindings/src/: lib.rs
crates/js-bindings/: .npmignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  offline_intelligence_js.win32-x64-msvc.node  package-lock.json  package.json
crates/js-bindings/src/: lib.rs
crates/offline-intelligence/: Cargo.toml  ChatInterface.py
crates/offline-intelligence/src/: admin.rs  backend_target.rs  config.rs  lib.rs  main.rs  memory.rs  metrics.rs  resources.rs  shared_state.rs  telemetry.rs  thread_pool.rs  thread_server.rs
crates/offline-intelligence/src/api/: admin_api.rs  conversation_api.rs  memory_api.rs  mod.rs  search_api.rs  stream_api.rs  title_api.rs
crates/offline-intelligence/src/cache_management/: cache_bridge.rs  cache_config.rs  cache_extractor.rs  cache_manager.rs  cache_scorer.rs  mod.rs  readme.md
crates/offline-intelligence/src/context_engine/: context_builder.rs  mod.rs  orchestrator.rs  retrieval_planner.rs  tier_manager.rs
crates/offline-intelligence/src/memory_db/: conversation_store.rs  embedding_store.rs  migration.rs  mod.rs  schema.rs  summary_store.rs
crates/offline-intelligence/src/memory_db/migrations/: 001_initial.sql  002_add_embeddings.sql  003_add_kv_snapshots.sql
crates/offline-intelligence/src/model_runtime/: coreml_runtime.rs  format_detector.rs  ggml_runtime.rs  gguf_runtime.rs  mod.rs  onnx_runtime.rs  runtime_manager.rs  runtime_trait.rs  safetensors_runtime.rs  tensorrt_runtime.rs
crates/offline-intelligence/src/utils/: mod.rs  text_utils.rs  topic_extractor.rs
crates/offline-intelligence/src/worker_threads/: cache_worker.rs  context_worker.rs  database_worker.rs  llm_worker.rs  mod.rs
crates/python-bindings/: Cargo.toml  PUBLISH_PYPI_INSTRUCTIONS.md  PUBLISH_READY.md  README.md  build_and_publish.py  pyproject.toml  requirements.txt  setup.py
crates/python-bindings/src/: lib.rs
docs/: CPP_BINDINGS.md  ENVIRONMENT_SETUP.md  GETTING_STARTED.md  GUIDES_INDEX.md  JAVA_BINDINGS.md  JS_BINDINGS.md  MODEL_INSTALLATION.md  OFFLINE_INTELLIGENCE.md  OFFLINE_INTELLIGENCE_CORE.md  PYTHON_BINDINGS.md  PYTHON_GETTING_STARTED.md  RUST_GETTING_STARTED.md
scripts/: publish-all.bat  publish-all.sh  publish-crates.bat  publish-crates.sh  test-all.sh
