[package]
name = "offline_intelligence_cpp"
version = "0.1.2"
edition = "2021"
description = "C++ bindings for Offline Intelligence Library"
license = "Apache-2.0"
repository = ""

[lib]
name = "offline_intelligence_cpp"
crate-type = ["cdylib", "staticlib"]

[dependencies]
offline-intelligence = "0.1.2"
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
libc = "0.2"
